--- a/index.html
+++ b/index.html
@@ -13,9 +13,19 @@
         rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+<!-- banner part start -->
 
 <body>
-
+    <section id="banner">
+        <div class="banner_text">
+            <h1>Let’s Help Those Who Are <br> More In Need</h1>
+            <p>We're deeply worried about the deteriorating flood situation in the north-eastern region of Bangladesh as
+                water from the upstream and heavy rainfall sent floodwaters surging into many villages and towns.
+            </p>
+            <a target="_blank" class="batton" href="https://www.facebook.com/sheikhdishanurrahman">Donate Now</a>
+        </div>
+    </section>
+    <!-- banner part end -->
 </body>
 
 </html>
