--- a/index.html
+++ b/index.html
@@ -26,6 +26,37 @@
         </div>
     </section>
     <!-- banner part end -->
+    <!-- Donate_Today part start -->
+    <section id="donet_today">
+        <div class="head_text">
+            <h2>Donate Today</h2>
+            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli <br> deterruisset. No duo populo
+                animal noluisse, enim</p>
+        </div>
+        <div class="doneted_main">
+            <div class="donet_item">
+                <h2>100tk</h2>
+            </div>
+            <div class="donet_item chang">
+                <h2>200tk</h2>
+            </div>
+            <div class="donet_item">
+                <h2>500tk</h2>
+            </div>
+            <div class="donet_item">
+                <h2>1000tk</h2>
+            </div>
+            <div class="donet_item">
+                <h2>5000tk</h2>
+            </div>
+        </div>
+        <div class="doner_inner">
+            <p>Other Amount (Taka)</p>
+            <hr>
+            <a class="batton" href="#">Donate Now</a>
+        </div>
+    </section>
+    <!--  Donate_Today part end -->
 </body>
 
 </html>
