--- a/index.html
+++ b/index.html
@@ -57,6 +57,37 @@
         </div>
     </section>
     <!--  Donate_Today part end -->
+
+    <!--  Donate_plan part start -->
+    <section id="donet_plan">
+        <div class="head_text">
+            <h2>Donate Today</h2>
+            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli <br> deterruisset. No duo populo
+                animal noluisse, enim</p>
+        </div>
+
+        <div class="plan_main">
+            <div class="plan_item plan_back1">
+                <img src="./icons/food.png" alt="">
+                <h3>Food for a family</h3>
+                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
+                    duis enim velit mollit.</p>
+            </div>
+            <div class="plan_item plan_back2">
+                <img src="./icons/shelter.png" alt="">
+                <h3>Shelter for a family</h3>
+                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
+                    duis enim velit mollit.</p>
+            </div>
+            <div class="plan_item plan_back3">
+                <img src="./icons/Frame-1.png" alt="">
+                <h3>Education for a child</h3>
+                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
+                    duis enim velit mollit.</p>
+            </div>
+        </div>
+    </section>
+    <!--  Donate_plany part end -->
 </body>
 
 </html>
