--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Montserrat:wght@400;500;600;700&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Lobster&family=Montserrat:wght@400;500;600;700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -88,6 +88,27 @@
         </div>
     </section>
     <!--  Donate_plany part end -->
+    <!--  update part start -->
+    <section id="update">
+        <div class="head_text">
+            <h2>Donate Today</h2>
+            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli <br> deterruisset. No duo populo
+                animal noluisse, enim</p>
+        </div>
+        <div class="mail_back">
+            <form class="form_main" action="">
+                <input class="input_das" type="email" placeholder="Email">
+                <button class="batton sub_btn " type="submit">Subscribe</button>
+            </form>
+        </div>
+    </section>
+    <!--  update part end -->
+    <!--  footer part start -->
+    <footer>
+        <h3>Be Humble</h3>
+        <p>I’m gonna do it</p>
+    </footer>
+    <!--  footer part end -->
 </body>
 
 </html>
