--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </div>
         </div>
         <div class="doner_inner">
-            <p>Other Amount (Taka)</p>
+            <input class="border_none" placeholder="Other Amount (Taka)" type="number">
             <hr>
             <a class="batton" href="#">Donate Now</a>
         </div>
@@ -61,7 +61,7 @@
     <!--  Donate_plan part start -->
     <section id="donet_plan">
         <div class="head_text">
-            <h2>Donate Today</h2>
+            <h2>Our Donate Plan</h2>
             <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli <br> deterruisset. No duo populo
                 animal noluisse, enim</p>
         </div>
@@ -88,10 +88,25 @@
         </div>
     </section>
     <!--  Donate_plany part end -->
+    <!-- contrebute part start -->
+    <section id="contrebute">
+        <div class="con_left">
+            <h2>Their lives depend on <br> your donation</h2>
+            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo
+                animal noluisse, enim</p>
+            <p class="margin">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset.</p>
+            <a class="batton" target="_blank" href="#">How to Contribute?</a>
+        </div>
+        <div class="con_right">
+            <img src="./images/donation11.jpg" alt="">
+        </div>
+    </section>
+    <!-- contrebute part end -->
+
     <!--  update part start -->
     <section id="update">
         <div class="head_text">
-            <h2>Donate Today</h2>
+            <h2>Get Our Updates</h2>
             <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli <br> deterruisset. No duo populo
                 animal noluisse, enim</p>
         </div>
