--- a/index.html
+++ b/index.html
@@ -103,6 +103,41 @@
     </section>
     <!-- contrebute part end -->
 
+    <!-- team part start -->
+    <section id="team">
+        <div class="head_text">
+            <h2>Our Donate Plan</h2>
+            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli <br> deterruisset. No duo populo
+                animal noluisse, enim</p>
+        </div>
+        <div class="team_main">
+            <div class="team_item">
+                <img src="./images/team1.jpg" alt="">
+                <h5>Asifur Rahman</h5>
+                <p>Manager</p>
+            </div>
+            <div class="team_item">
+                <img src="./images/team2.jpg" alt="">
+                <h5>priyanka Begum</h5>
+                <p>Cashier</p>
+            </div>
+            <div class="team_item">
+
+                <img src="./images/team3.jpg" alt="">
+                <h5>Dishanur Rahman</h5>
+                <p>Distrebutor</p>
+
+            </div>
+            <div class="team_item">
+                <img src="./images/team4.jpg" alt="">
+                <h5>Jorina khatun</h5>
+                <p>Member</p>
+            </div>
+        </div>
+    </section>
+    <!-- team part end -->
+
+
     <!--  update part start -->
     <section id="update">
         <div class="head_text">
