--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
     <section id="donet_today">
         <div class="head_text">
             <h2>Donate Today</h2>
-            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli <br> deterruisset. No duo populo
-                animal noluisse, enim</p>
+            <p>They are living a very helpless life. With a little help from you,<br> they will benefit a lot
+            </p>
         </div>
         <div class="doneted_main">
             <div class="donet_item">
@@ -62,28 +62,33 @@
     <section id="donet_plan">
         <div class="head_text">
             <h2>Our Donate Plan</h2>
-            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli <br> deterruisset. No duo populo
-                animal noluisse, enim</p>
+            <p>We work day and night to get your help to the right people <br> you can trust us.
+            </p>
         </div>
 
         <div class="plan_main">
             <div class="plan_item plan_back1">
                 <img src="./icons/food.png" alt="">
                 <h3>Food for a family</h3>
-                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
-                    duis enim velit mollit.</p>
+                <p>In personalized nutrition, food is a tool for good health, implying an instrumental relationship
+                    between food and health. Food receives a secondary value, while health would appear to be a
+                    descriptive biological concept. </p>
             </div>
             <div class="plan_item plan_back2">
                 <img src="./icons/shelter.png" alt="">
                 <h3>Shelter for a family</h3>
-                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
-                    duis enim velit mollit.</p>
+                <p>Economic hardship unrelated to shelter was the most common reason for separations (15 families and
+                    instances).
+                    doubled up with others because they could not afford their own place, or moving from place to place.
+                </p>
             </div>
             <div class="plan_item plan_back3">
                 <img src="./icons/Frame-1.png" alt="">
                 <h3>Education for a child</h3>
-                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
-                    duis enim velit mollit.</p>
+                <p>Without quality education, children face considerable barriers to employment and earning potential
+                    later in life. They are more likely to suffer adverse health outcomes and less likely to participate
+                    in decisions that affect them – threatening their ability to shape a better future for themselves
+                    and their societies..</p>
             </div>
         </div>
     </section>
@@ -92,9 +97,13 @@
     <section id="contrebute">
         <div class="con_left">
             <h2>Their lives depend on <br> your donation</h2>
-            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo
-                animal noluisse, enim</p>
-            <p class="margin">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset.</p>
+            <p>Your little help will help to change their destiny. Not everyone is always well. Today they are in
+                danger. Come forward. Tomorrow may be your danger. Then they will come.
+            </p>
+            <p class="margin">You will pray that we can work for the needy. We also pray that you will be well. For
+                human beings we will come forward to help each other.
+
+            </p>
             <a class="batton" target="_blank" href="#">How to Contribute?</a>
         </div>
         <div class="con_right">
@@ -106,9 +115,10 @@
     <!-- team part start -->
     <section id="team">
         <div class="head_text">
-            <h2>Our Donate Plan</h2>
-            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli <br> deterruisset. No duo populo
-                animal noluisse, enim</p>
+            <h2>Our Dedicated Team</h2>
+            <p>Our team is working tirelessly all day to help the flood victims. <br> We all wish you blessings so that
+                we
+                can do our job properly.</p>
         </div>
         <div class="team_main">
             <div class="team_item">
@@ -142,8 +152,8 @@
     <section id="update">
         <div class="head_text">
             <h2>Get Our Updates</h2>
-            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli <br> deterruisset. No duo populo
-                animal noluisse, enim</p>
+            <p>Learn more details about us Enter your email below. <br>Have a good day.
+            </p>
         </div>
         <div class="mail_back">
             <form class="form_main" action="">
