--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="doner_inner">
             <input class="border_none" placeholder="Other Amount (Taka)" type="number">
             <hr>
-            <a class="batton" href="#">Donate Now</a>
+            <a target="_blank" class="batton" href="https://www.facebook.com/sheikhdishanurrahman">Donate Now</a>
         </div>
     </section>
     <!--  Donate_Today part end -->
@@ -104,7 +104,8 @@
                 human beings we will come forward to help each other.
 
             </p>
-            <a class="batton" target="_blank" href="#">How to Contribute?</a>
+            <a class="batton" target="_blank" href="https://www.facebook.com/sheikhdishanurrahman">How to
+                Contribute?</a>
         </div>
         <div class="con_right">
             <img src="./images/donation11.jpg" alt="">
